--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <button class="operator" value="+">+</button>
             <button class="operator" value="-">-</button>
             <button class="operator" value="*">×</button>
-            <button value="/">÷</button>
+            <button class="operator" value="/">÷</button>
             <button value="7">7</button>
             <button value="8">8</button>
             <button value="9">9</button>
