--- a/index.html
+++ b/index.html
@@ -5,11 +5,26 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style/style.css">
     <title>Calculator</title>
 </head>
 <body>
+
     <div>
+
+        <nav class="navbar">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="./assets/images/IMG_0879.JPG" alt=""  class="d-inline-block align-text-top card-img-top">
+                </a>
+            </div>
+        </nav>
+
+        <h2 class="display-1">Simple Calculator</h2>
+
+
+
         <div class="calculator">
             <div class="calculator-display">
                 <h1>0</h1>
@@ -34,9 +49,14 @@
                 <button class="equal-sign operator" value="=">=</button>
             </div>
         </div>
+
+
+
+
     </div>
 
 
     <script src="assets/scripts/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
